src/specific_models/bot-iot/attack_identification/logfile.2020-07-12-17_17_20.log
  File "autoencoder.py", line 437
    top_n_values = -temp [: int (round (val_mse_element_wise.shape [0] * 0.01))]
               ^
SyntaxError: invalid syntax
